[package]
name = "wp-linux"
version = "0.1.0"
description = "WhatsApp Web client built with Rust"
license = "GPL-3.0-or-later"
edition = "2021"
authors = ["Ali <karahanciali@hotmail.com>"]
repository = "https://github.com/AliKarahanci/wp-linux"
keywords = ["whatsapp", "webkit", "gtk", "rust"]
categories = ["gui", "network"]

[dependencies]
tao = "0.16"
wry = "0.24"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[features]
default = ["wayland"]
wayland = []
x11 = []
tray = []
notifications = []
